--- a/Exercícios/ex022/imagens/fundo005.html
+++ b/Exercícios/ex022/imagens/fundo005.html
@@ -7,9 +7,9 @@
     <style>
         body {
             background-repeat: no-repeat;
-            height: 98vh;
-            background-image: url('wallpaper005.jpg');
-            background-position: top center;
+            height: 100vh;
+            background-image: url('wallpaper003.jpg');
+            background-position: left top;
         }
     </style>
 </head>
