--- a/Exercícios/ex022/fundo006.html
+++ b/Exercícios/ex022/fundo006.html
@@ -7,15 +7,20 @@
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed; */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
+
         main {
             background-color: white;
-            width: 400px;
+            width: 700px;
             padding: 10px;
             margin: auto;border: 1px solid darkblue;
             border-radius: 15px;
@@ -29,6 +34,29 @@
             Teste de imagem de fundo</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa dolor suscipit distinctio! Facere odio architecto id aliquid consectetur nesciunt ratione nemo, rem illum eius. Fuga eligendi id illo illum dolorum!
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque debitis veniam doloremque commodi unde, earum labore incidunt veritatis! Sint optio architecto quidem porro autem placeat enim ullam earum ipsam doloremque? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident ad, dolorem recusandae id nostrum necessitatibus fugit, sint explicabo veritatis soluta est voluptatibus doloremque quo sequi porro aliquid molestias voluptatem ipsa?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt corrupti deserunt, impedit magnam pariatur nesciunt possimus tempore reprehenderit delectus magni, explicabo voluptate, quae mollitia commodi. At earum modi fugiat excepturi! 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quis ipsum culpa molestias. Fuga ea dolor minima saepe enim possimus inventore iusto. Ipsa officiis, distinctio optio saepe doloribus dolorem ad.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quam iure iste nesciunt totam deserunt, tempora ipsa laborum, amet voluptatibus et, sapiente perferendis veniam in explicabo illum itaque quae. Nam?
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa dolor suscipit distinctio! Facere odio architecto id aliquid consectetur nesciunt ratione nemo, rem illum eius. Fuga eligendi id illo illum dolorum!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque debitis veniam doloremque commodi unde, earum labore incidunt veritatis! Sint optio architecto quidem porro autem placeat enim ullam earum ipsam doloremque? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident ad, dolorem recusandae id nostrum necessitatibus fugit, sint explicabo veritatis soluta est voluptatibus doloremque quo sequi porro aliquid molestias voluptatem ipsa?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt corrupti deserunt, impedit magnam pariatur nesciunt possimus tempore reprehenderit delectus magni, explicabo voluptate, quae mollitia commodi. At earum modi fugiat excepturi! 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quis ipsum culpa molestias. Fuga ea dolor minima saepe enim possimus inventore iusto. Ipsa officiis, distinctio optio saepe doloribus dolorem ad.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quam iure iste nesciunt totam deserunt, tempora ipsa laborum, amet voluptatibus et, sapiente perferendis veniam in explicabo illum itaque quae. Nam?
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa dolor suscipit distinctio! Facere odio architecto id aliquid consectetur nesciunt ratione nemo, rem illum eius. Fuga eligendi id illo illum dolorum!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque debitis veniam doloremque commodi unde, earum labore incidunt veritatis! Sint optio architecto quidem porro autem placeat enim ullam earum ipsam doloremque? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident ad, dolorem recusandae id nostrum necessitatibus fugit, sint explicabo veritatis soluta est voluptatibus doloremque quo sequi porro aliquid molestias voluptatem ipsa?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt corrupti deserunt, impedit magnam pariatur nesciunt possimus tempore reprehenderit delectus magni, explicabo voluptate, quae mollitia commodi. At earum modi fugiat excepturi! 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quis ipsum culpa molestias. Fuga ea dolor minima saepe enim possimus inventore iusto. Ipsa officiis, distinctio optio saepe doloribus dolorem ad.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quam iure iste nesciunt totam deserunt, tempora ipsa laborum, amet voluptatibus et, sapiente perferendis veniam in explicabo illum itaque quae. Nam?
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa dolor suscipit distinctio! Facere odio architecto id aliquid consectetur nesciunt ratione nemo, rem illum eius. Fuga eligendi id illo illum dolorum!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque debitis veniam doloremque commodi unde, earum labore incidunt veritatis! Sint optio architecto quidem porro autem placeat enim ullam earum ipsam doloremque? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident ad, dolorem recusandae id nostrum necessitatibus fugit, sint explicabo veritatis soluta est voluptatibus doloremque quo sequi porro aliquid molestias voluptatem ipsa?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt corrupti deserunt, impedit magnam pariatur nesciunt possimus tempore reprehenderit delectus magni, explicabo voluptate, quae mollitia commodi. At earum modi fugiat excepturi! 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quis ipsum culpa molestias. Fuga ea dolor minima saepe enim possimus inventore iusto. Ipsa officiis, distinctio optio saepe doloribus dolorem ad.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quam iure iste nesciunt totam deserunt, tempora ipsa laborum, amet voluptatibus et, sapiente perferendis veniam in explicabo illum itaque quae. Nam?
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa dolor suscipit distinctio! Facere odio architecto id aliquid consectetur nesciunt ratione nemo, rem illum eius. Fuga eligendi id illo illum dolorum!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque debitis veniam doloremque commodi unde, earum labore incidunt veritatis! Sint optio architecto quidem porro autem placeat enim ullam earum ipsam doloremque? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident ad, dolorem recusandae id nostrum necessitatibus fugit, sint explicabo veritatis soluta est voluptatibus doloremque quo sequi porro aliquid molestias voluptatem ipsa?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt corrupti deserunt, impedit magnam pariatur nesciunt possimus tempore reprehenderit delectus magni, explicabo voluptate, quae mollitia commodi. At earum modi fugiat excepturi! 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quis ipsum culpa molestias. Fuga ea dolor minima saepe enim possimus inventore iusto. Ipsa officiis, distinctio optio saepe doloribus dolorem ad.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quam iure iste nesciunt totam deserunt, tempora ipsa laborum, amet voluptatibus et, sapiente perferendis veniam in explicabo illum itaque quae. Nam?
             </p>
     </main>
 </body>
