--- a/Exercícios/ex023/tabela001.html
+++ b/Exercícios/ex023/tabela001.html
@@ -11,20 +11,18 @@
 
         table {
         width: 400px;
+        height: 400px;
         border-collapse: collapse;
         }
 
-        tr.linha {
-            background-color: gray;
-        }
         td {
             border: 1px solid black;
             padding: 8px;
+            text-align: center;
+            vertical-align: middle;
+            
         }
 
-        td.dado {
-            background-color: yellowgreen;
-        }
     </style>
 </head>
 <body>
@@ -32,7 +30,7 @@
     <table>
         <tr>
             <td>A1</td>
-            <td class="dado">B1</td>
+            <td>B1</td>
             <td>C1</td>
         </tr>
         <tr>
@@ -40,7 +38,7 @@
             <td>B2</td>
             <td>C2</td>
         </tr>
-        <tr class="linha">
+        <tr>
             <td>A3</td>
             <td>B3</td>
             <td>C3</td>
