atualizei o exercício de iframes

--- a/Exercícios/ex024-iframes/iframe003.html
+++ b/Exercícios/ex024-iframes/iframe003.html
@@ -29,7 +29,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos aut corrupti exercitationem incidunt repellendus laboriosam impedit quam dolores mollitia nobis dolor amet magnam, ipsum quo natus, expedita, cumque molestiae asperiores. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis, laudantium, cumque maiores rerum facilis aperiam illum asperiores et omnis nisi sint voluptas? Voluptas consequatur assumenda, eum beatae labore alias voluptate!
     </p>
 
-    <iframe id="tela" name="pagina" srcdoc="<h1>Escolha uma das opções acima.</h1> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo sed sapiente reiciendis est ea quod iste exercitationem dolore dicta, tempore reprehenderit distinctio placeat ex culpa dolorum, in, voluptatibus quia molestiae!</P>
+    <iframe id="tela" name="pagina" srcdoc="
     <img src='imagens/foto-m.png'></iframe>
     </iframe>">
         <p>Infelizmente seu navgador não é compatível com isso!</p>
